1. Метод .of [#70623 #550305]